--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,36 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    minSdkVersion = 15
+    targetSdkVersion = 25
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.3'
+
+    // App dependencies
+    supportLibraryVersion = '25.3.1'
+    constraintLayoutVersion = '1.0.2'
+    guavaVersion = '18.0'
+    glideVersion = '3.6.1'
+    junitVersion = '4.12'
+    mockitoVersion = '1.10.19'
+    powerMockito = '1.6.2'
+    hamcrestVersion = '1.3'
+    runnerVersion = '0.5'
+    rulesVersion = '0.5'
+    espressoVersion = '2.2.2'
+    butterknifeVersion = '8.8.1'
+    retrofitVersion = '2.3.0'
+    gsonVersion = '2.3.0'
+    picassoVersion = '2.5.2'
 }
